examples/test/testpolicy3254.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3254
  namespace: namespace373
spec:
  podSelector:
    matchLabels:
      key11: value44
      key24: value15
      key5: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value6
          key39: value36
      podSelector:
        matchLabels:
          key6: value4
          key38: value17
          key37: value48
